@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2003/12/17 19:27:29 jdolecek Exp $
